--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
         <url>https://github.com/mojohaus/aspectj-maven-plugin</url>
     </scm>
     <issueManagement>
-        <system>jira</system>
-        <url>http://jira.codehaus.org/browse/MASPECTJ</url>
+        <system>github</system>
+        <url>https://github.com/mojohaus/aspectj-maven-plugin/issues</url>
     </issueManagement>
     <ciManagement>
         <system>bamboo</system>
