update my info due to move from codehaus

--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,9 @@
         </contributor>
         <contributor>
             <name>David J. M. Karlsen</name>
-            <email>david@codehaus.org</email>
+            <email>david@davidkarlsen.com</email>
             <organization>davidkarlsen.com</organization>
             <organizationUrl>http://www.davidkarlsen.com</organizationUrl>
-            <url>http://xircles.codehaus.org/users/david</url>
             <roles>
                 <role>Java Developer</role>
             </roles>
