--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <aspectjVersion>1.8.6</aspectjVersion>
-        <mavenVersion>2.2.1</mavenVersion>
+        <mavenVersion>3.0.5</mavenVersion>
         <mojo.java.target>1.6</mojo.java.target> <!-- to ensure correct JDK requirement om project summary page, otherwise 1.5 would be enough to compile -->
     </properties>
 
@@ -116,7 +116,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
-            <artifactId>maven-artifact</artifactId>
+            <artifactId>maven-core</artifactId>
             <version>${mavenVersion}</version>
         </dependency>
         <dependency>
@@ -125,14 +125,9 @@
             <version>${mavenVersion}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-project</artifactId>
-            <version>${mavenVersion}</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.maven.reporting</groupId>
             <artifactId>maven-reporting-api</artifactId>
-            <version>${mavenVersion}</version>
+            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -146,14 +141,19 @@
         </dependency>
         <!-- Other -->
         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <version>${mavenVersion}</version>
+        </dependency>
+∫       <dependency>
             <groupId>org.apache.maven.doxia</groupId>
             <artifactId>doxia-site-renderer</artifactId>
-            <version>1.1.2</version>
+            <version>1.6</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.reporting</groupId>
             <artifactId>maven-reporting-impl</artifactId>
-            <version>2.1</version>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -183,7 +183,7 @@
         <dependency>
             <groupId>org.apache.maven.plugin-testing</groupId>
             <artifactId>maven-plugin-testing-harness</artifactId>
-            <version>1.2</version>
+            <version>2.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
