Workaround for issue #1 http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     </licenses>
 
     <properties>
+        <additionalparam>-Xdoclint:none</additionalparam>
         <aspectjVersion>1.8.6</aspectjVersion>
         <mavenVersion>2.2.1</mavenVersion>
         <mojo.java.target>1.6</mojo.java.target> <!-- to ensure correct JDK requirement om project summary page, otherwise 1.5 would be enough to compile -->
