Fixes #29 Configured maven-plugin-plugin report to only build a report for aspectj-maven-plugin artifact

--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,14 @@
   <reporting>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>3.5</version>
+        <configuration>
+          <mojoDependencies>org.codehaus.mojo:aspectj-maven-plugin</mojoDependencies>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>l10n-maven-plugin</artifactId>
         <version>1.0-alpha-2</version>
