add a comment so we can track back why

--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,7 @@
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.5</version>
         <configuration>
+          <!-- see: https://github.com/apache/maven-plugin-tools/pull/11 -->
           <mojoDependencies>org.codehaus.mojo:aspectj-maven-plugin</mojoDependencies>
         </configuration>
       </plugin>
@@ -315,6 +316,7 @@
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.5</version>
         <configuration>
+          <!-- see: https://github.com/apache/maven-plugin-tools/pull/11 -->
           <mojoDependencies>org.codehaus.mojo:aspectj-maven-plugin</mojoDependencies>
         </configuration>
       </plugin>
