Fix build to make runtime work on JDK9/10
- prepare testsuite to work on JDK9 and 10

--- a/src/it/BuildConfigFileAndAspectJ5/pom.xml
+++ b/src/it/BuildConfigFileAndAspectJ5/pom.xml
@@ -18,7 +18,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -33,7 +36,7 @@
         </executions>
         <configuration>
           <ajdtBuildDefFile>build-1-5.ajproperties</ajdtBuildDefFile>
-          <complianceLevel>1.5</complianceLevel>
+          <complianceLevel>1.8</complianceLevel>
         </configuration>
       </plugin>
     </plugins>
