--- a/pom.xml
+++ b/pom.xml
@@ -101,19 +101,6 @@
     </contributor>
   </contributors>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>com.sun</groupId>
-        <artifactId>tools</artifactId>
-        <version>${java.version}</version>
-        <scope>system</scope>
-        <!-- Dummy path, override later (should point to tools.jar) -->
-        <systemPath>${java.home}/lib/rt.jar</systemPath>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <dependencies>
         <!-- Maven core -->
         <dependency>
@@ -210,6 +197,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.0.0-M1</version>
         <executions>
           <execution>
             <id>enforce-bytecode-version</id>
@@ -232,7 +220,7 @@
           <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>extra-enforcer-rules</artifactId>
-            <version>1.0-beta-3</version>
+            <version>1.0-beta-7</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -345,52 +333,35 @@
       by Eclipse, leading to problems ever since the 'java8' profile was introduced here because it also
       defines a property.
     -->
-    <profile>
-      <id>standardToolsJar-profile</id>
-      <activation>
-        <file>
-          <exists>${java.home}/../lib/tools.jar</exists>
-        </file>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun</groupId>
-          <artifactId>tools</artifactId>
-          <scope>system</scope>
-          <systemPath>${java.home}/../lib/tools.jar</systemPath>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>appleJdkToolsJar-profile</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <file>
-          <exists>${java.home}/../Classes/classes.jar</exists>
-        </file>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun</groupId>
-          <artifactId>tools</artifactId>
-          <scope>system</scope>
-          <systemPath>${java.home}/../Classes/classes.jar</systemPath>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>java8</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <properties>
-        <!--
-          Because of this properties section the old way of setting the tools.jar path via a property defined in
-          another profile does not work anymore when importing Maven projects into Eclipse. :-(
-        -->
-        <additionalparam>-Xdoclint:none</additionalparam>
-      </properties>
-    </profile>
+
+      <profile>
+          <id>tools-jar</id>
+          <activation>
+              <jdk>1.8</jdk> <!-- activate only on JDK8, as 8 is minimum version to run aspectj on-->
+          </activation>
+          <dependencies>
+              <dependency>
+                  <groupId>com.sun</groupId>
+                  <artifactId>tools</artifactId>
+                  <version>1.8</version>
+                  <scope>system</scope>
+                  <systemPath>${java.home}/../lib/tools.jar</systemPath>
+              </dependency>
+          </dependencies>
+      </profile>
+      <profile>
+          <id>java8</id>
+          <activation>
+              <jdk>[1.8,)</jdk>
+          </activation>
+          <properties>
+              <!--
+                Because of this properties section the old way of setting the tools.jar path via a property defined in
+                another profile does not work anymore when importing Maven projects into Eclipse. :-(
+              -->
+              <additionalparam>-Xdoclint:none</additionalparam>
+          </properties>
+      </profile>
     <profile>
       <id>maven-repo-local</id>
       <activation>
