--- a/src/it/AjcTestCompilerUsingCorrectClasspath/pom.xml
+++ b/src/it/AjcTestCompilerUsingCorrectClasspath/pom.xml
@@ -24,7 +24,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -39,7 +42,7 @@
         </executions>
         <configuration>
           <ajdtBuildDefFile>test-build-1-5.ajproperties</ajdtBuildDefFile>
-          <complianceLevel>1.5</complianceLevel>
+          <complianceLevel>1.8</complianceLevel>
           <showWeaveInfo>true</showWeaveInfo>
           <verbose>true</verbose>
         </configuration>
