--- a/src/it/AnnotationProcessingOutput/pom.xml
+++ b/src/it/AnnotationProcessingOutput/pom.xml
@@ -13,8 +13,13 @@
     </dependency>
     <dependency>
       <groupId>com.google.auto.value</groupId>
+      <artifactId>auto-value-annotations</artifactId>
+      <version>1.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value</artifactId>
-      <version>1.0-rc1</version>
+      <version>1.6</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -42,7 +47,7 @@
           </execution>
         </executions>
         <configuration>
-          <complianceLevel>1.7</complianceLevel>
+          <complianceLevel>1.8</complianceLevel>
         </configuration>
       </plugin>
     </plugins>
