--- a/src/it/MASPECTJ-110/pom.xml
+++ b/src/it/MASPECTJ-110/pom.xml
@@ -20,7 +20,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+          <configuration>
+              <source>1.8</source>
+              <target>1.8</target>
+          </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -35,7 +38,7 @@
                   <configuration>
                       <forceAjcCompile>true</forceAjcCompile>
                       <aspectDirectory>src/main/nonexistentCompileDirectory</aspectDirectory>
-                      <complianceLevel>1.5</complianceLevel>
+                      <complianceLevel>1.8</complianceLevel>
                   </configuration>
               </execution>
               <execution>
@@ -46,7 +49,7 @@
                   <configuration>
                       <forceAjcCompile>true</forceAjcCompile>
                       <aspectDirectory>src/main/trivialaspects</aspectDirectory>
-                      <complianceLevel>1.5</complianceLevel>
+                      <complianceLevel>1.8</complianceLevel>
                   </configuration>
               </execution>
               <execution>
@@ -58,7 +61,7 @@
                       <forceAjcCompile>true</forceAjcCompile>
                       <aspectDirectory>src/main/trivialaspects</aspectDirectory>
                       <testAspectDirectory>src/test/nonexistentTestCompileDirectory</testAspectDirectory>
-                      <complianceLevel>1.5</complianceLevel>
+                      <complianceLevel>1.8</complianceLevel>
                   </configuration>
               </execution>
               <execution>
@@ -69,7 +72,7 @@
                   <configuration>
                       <forceAjcCompile>true</forceAjcCompile>
                       <testAspectDirectory>src/test/trivialtestaspects</testAspectDirectory>
-                      <complianceLevel>1.5</complianceLevel>
+                      <complianceLevel>1.8</complianceLevel>
                   </configuration>
               </execution>
           </executions>
