--- a/src/it/MASPECTJ-86/pom.xml
+++ b/src/it/MASPECTJ-86/pom.xml
@@ -23,7 +23,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+          <configuration>
+              <source>1.8</source>
+              <target>1.8</target>
+          </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -37,7 +40,7 @@
           </execution>
         </executions>
         <configuration>
-          <complianceLevel>1.5</complianceLevel>
+          <complianceLevel>1.8</complianceLevel>
           <forceAjcCompile>true</forceAjcCompile>
           <weaveDependencies>
             <weaveDependency>
