--- a/src/it/NoMainSourceWeave/pom.xml
+++ b/src/it/NoMainSourceWeave/pom.xml
@@ -24,7 +24,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -38,7 +41,7 @@
           </execution>
         </executions>
         <configuration>
-          <complianceLevel>1.5</complianceLevel>
+          <complianceLevel>1.8</complianceLevel>
           <weaveMainSourceFolder>false</weaveMainSourceFolder>
         </configuration>
       </plugin>
