--- a/src/it/TOFIX_MASPECTJ-4/pom.xml
+++ b/src/it/TOFIX_MASPECTJ-4/pom.xml
@@ -33,7 +33,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -48,7 +51,7 @@
           </execution>
         </executions>
         <configuration>
-          <complianceLevel>1.5</complianceLevel>
+          <complianceLevel>1.8</complianceLevel>
         </configuration>
       </plugin>
       <plugin>
