--- a/src/it/CreateDefaultLoadTimeWeaveXml/pom.xml
+++ b/src/it/CreateDefaultLoadTimeWeaveXml/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codehaus.mojo.aspectj.it</groupId>
+  <groupId>com.nickwongdev.aspectj.it</groupId>
   <artifactId>createdefaultloadtimeweavexml</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
@@ -24,7 +24,7 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>com.nickwongdev</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>@project.version@</version>
         <executions>
