--- a/src/it/CreateReport/invoker.properties
+++ b/src/it/CreateReport/invoker.properties
@@ -1,1 +1,1 @@
-invoker.goals = clean compile org.codehaus.mojo:aspectj-maven-plugin:${project.version}:aspectj-report
+invoker.goals = clean compile com.nickwongdev:aspectj-maven-plugin:${project.version}:aspectj-report
