--- a/src/it/MASPECTJ-110/pom.xml
+++ b/src/it/MASPECTJ-110/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codehaus.mojo.aspectj.it</groupId>
+  <groupId>com.nickwongdev.aspectj.it</groupId>
   <artifactId>MASPECTJ-110</artifactId>
   <version>0.0.1-SNAPSHOT</version>
     <description>Verifies that nonexistent directories are not added to compile or testCompile source
@@ -26,7 +26,7 @@
           </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>com.nickwongdev</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>@project.version@</version>
           <executions>
