--- a/src/it/Xlint/pom.xml
+++ b/src/it/Xlint/pom.xml
@@ -24,7 +24,7 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>com.nickwongdev</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>@project.version@</version>
         <executions>
