--- a/src/test/projects/no-sources-project/pom.xml
+++ b/src/test/projects/no-sources-project/pom.xml
@@ -20,7 +20,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
+				<groupId>com.nickwongdev</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
 				<executions>
 					<execution>
