--- a/src/test/projects/parent-child-test-project/pom.xml
+++ b/src/test/projects/parent-child-test-project/pom.xml
@@ -16,7 +16,7 @@
    <build>
      <plugins>
        <plugin>
-         <groupId>org.codehaus.mojo</groupId>
+         <groupId>com.nickwongdev</groupId>
          <artifactId>aspectj-maven-plugin</artifactId>
          <executions>
            <execution>
