--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,4 +51,4 @@ jobs:
           java-version: ${{ matrix.java }}
 
       - name: Build with Maven
-        run: mvn verify -e -B -V -P run-its javadoc:javadoc site site:stage
+        run: mvn verify -e -B -V javadoc:javadoc site site:stage
