--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <mavenVersion>3.3.9</mavenVersion>
     <doxiaVersion>1.6</doxiaVersion>
     <mojo.java.target>1.8</mojo.java.target> <!-- aspectJ &gt; 1.8.13 is JDK 1.8 minimum -->
+    <project.build.outputTimestamp>1</project.build.outputTimestamp>
     <!-- work around until it is correctly fixed at top parent -->
     <scmpublish.content>${project.build.directory}/staging/aspectj-maven-plugin</scmpublish.content>
   </properties>
